testsuite/tests/explicit-dicts/should_fail/Incoherence1.stderr

Incoherence1.hs:9:12: error:
    • Explicit dictionary application not allowed: incoherence detected
    • In the expression: foo dict
      In an equation for ‘bar’: bar dict = foo dict
